chore: add CORS configuration and Docker environment settings
- Add CORS configuration with Web and Mobile origins to appsettings.json
- Add appsettings.Docker.json for containerized environment
- Update appsettings.Development.json structure for consistency
- Enable cross-origin requests from localhost:3000 (web) and localhost:19006 (mobile)

--- a/src/NursingCareBackend.Api/appsettings.json
+++ b/src/NursingCareBackend.Api/appsettings.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=NursingCareDb;User Id=sa;Password=1202lingSter89*;TrustServerCertificate=True;"
-  }
+  },
+  "AllowedHosts": "*",
+  "Cors": {
+      "WebOrigins": [ "http://localhost:3000" ],
+      "MobileOrigins": [ "http://localhost:19006" ]
+    }
+
+  
 }
