--- a/src/NursingCareBackend.Api/appsettings.Docker.json
+++ b/src/NursingCareBackend.Api/appsettings.Docker.json
@@ -6,6 +6,10 @@
     },
     "ConnectionStrings": {
       "DefaultConnection": "Server=localhost,1433;Database=NursingCareDb;User Id=sa;Password=1202lingSter89*;TrustServerCertificate=True;"
+    },
+    "Cors": {
+      "WebOrigins": ["http://localhost:3000"],
+      "MobileOrigins": ["http://localhost:19006"]
     }
   }
 }
